Update styles to match new design and refactor jsx to align with more correct usage of dt/dd

--- a/src/components/Customer/PPM/Closeout/ReviewItems/ReviewItems.module.scss
+++ b/src/components/Customer/PPM/Closeout/ReviewItems/ReviewItems.module.scss
@@ -89,12 +89,8 @@
     dl {
       @include u-margin-bottom(0);
       @include u-flex(1);
-      .empty {
-        @include u-height(2);
-      }
       .w2Address {
-        color: $base-darker;
-        @include u-font-weight(bold);
+        @include u-margin-top(2);
       }
     }
 
